tdf#165521 svx layout: clear Outliner FixedCellHeight after use

This specifically avoids a PPTX custom shape's editEngine flag
from bleeding into the remainder of the document
and affecting another shape's sizing calculations.

This bleeding was noticably affecting PPTX table sizes,
triggering the investigation that lead to this patch.

FALSE REGRESSION NOTE:
It appears that perhaps PPT/X tables SHOULD ALWAYS
be sized according to SDRATTR_TEXT_USEFIXEDCELLHEIGHT = TRUE.
In other words, tables currently match MS Powerpoint's table size
only when they accidentally have this setting bleed through.
With this patch, we are effectively always setting it to FALSE,
and thus tables will never be accidentally correct anymore.
... and the same possibly is true for all kinds of other shapes.

The problem with having a correct Powerpoint table size
is that the text inside the table needs to also
be in sync with this sizing calculation.
Otherwise it will either be too small (commonly),
or it could spill out of the table
(in cases where the font is designed with a large leading).

This patch's effect on tables is to allow
the table to only be defined by its own content.
Now when other actions cause a table recalculation
(like selecting text, drag and drop, editing)
the table size won't fluctuate (since in this re-draw context
there wasn't any FixedCellHeight bleeding into the calculation).

make CppunitTest_svx_unit \
        CPPUNIT_TEST_NAME=testTdf165521_fixedCellHeight

Change-Id: I5239c78cf8f1e8fffd65b6aa285a840428e92e5c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/183342
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Justin Luth <jluth@mail.com>