svx/qa/unit/table.cxx
@@ -102,6 +102,59 @@ CPPUNIT_TEST_FIXTURE(Test, testTableShadowBlur)
                 u"80");
 }
 
+CPPUNIT_TEST_FIXTURE(Test, testTdf165521_fixedCellHeight)
+{
+    // Given a document containing a table whose size/text should match the textbox:
+    // (In this Liberation Sans unit test, the text is too small and doesn't fill the table,
+    // while in the bug report's Marianne font example, the text is too large, spilling out of it.)
+
+    loadFromFile(u"tdf165521_fixedCellHeight.pptx");
+
+    // When rendering the table:
+    uno::Reference<drawing::XDrawPagesSupplier> xDrawPagesSupplier(mxComponent, uno::UNO_QUERY);
+    uno::Reference<drawing::XDrawPage> xDrawPage(xDrawPagesSupplier->getDrawPages()->getByIndex(0),
+                                                 uno::UNO_QUERY);
+    drawinglayer::primitive2d::Primitive2DContainer xPrimitiveSequence
+        = renderPageToPrimitives(xDrawPage);
+
+    // TODO: Then make sure the text in both table and textbox are the same line height
+    svx::ExtendedPrimitive2dXmlDump aDumper;
+    xmlDocUniquePtr pDocument = aDumper.dumpAndParse(xPrimitiveSequence);
+    // const char sTextboxPath6[] = "/primitive2D/objectinfo[1]/unhandled/group/sdrblocktext/"
+    //                              "texthierarchyblock/texthierarchyparagraph/texthierarchyline[6]/"
+    //                              "textsimpleportion";
+    const char sTextboxPath7[] = "/primitive2D/objectinfo[1]/unhandled/group/sdrblocktext/"
+                                 "texthierarchyblock/texthierarchyparagraph/texthierarchyline[7]/"
+                                 "textsimpleportion";
+    CPPUNIT_ASSERT(
+        getXPath(pDocument, sTextboxPath7, "text")
+            .startsWith("Autofit Custom Shape forces Fixed Cell Height even in the table."));
+    // const sal_Int32 nTextBoxFontLineHeight = getXPath(pDocument, sTextboxPath7, "y").toInt32()
+    //                                          - getXPath(pDocument, sTextboxPath6, "y").toInt32();
+
+    const char sTablePath6[] = "/primitive2D/objectinfo[2]/sdrCell[2]/group/sdrblocktext/"
+                               "texthierarchyblock/texthierarchyparagraph/texthierarchyline[6]/"
+                               "textsimpleportion";
+    const char sTablePath7[] = "/primitive2D/objectinfo[2]/sdrCell[2]/group/sdrblocktext/"
+                               "texthierarchyblock/texthierarchyparagraph/texthierarchyline[7]/"
+                               "textsimpleportion";
+    CPPUNIT_ASSERT(getXPath(pDocument, sTablePath7, "text").startsWith("Qualcomm Snapdragon"));
+    const sal_Int32 nTableFontLineHeight = getXPath(pDocument, sTablePath7, "y").toInt32()
+                                           - getXPath(pDocument, sTablePath6, "y").toInt32();
+    // Expected: 593.
+    // Actual (without the acompanying patch) 553
+    // CPPUNIT_ASSERT_EQUAL(nTextBoxFontLineHeight, nTableFontLineHeight);
+
+    // All of the text must fit inside the table,
+    // and the table must be approximately the same size as the lines of text.
+    sal_Int32 nTableHeight
+        = getXPath(pDocument,
+                   "/primitive2D/objectinfo[2]/sdrCell[2]/group/polypolygoncolor/polypolygon",
+                   "height")
+              .toInt32();
+    CPPUNIT_ASSERT_DOUBLES_EQUAL(7 * nTableFontLineHeight, nTableHeight, 1);
+}
+
 CPPUNIT_TEST_FIXTURE(Test, testSvxTableControllerSetAttrToSelectedShape)
 {
     // Given a document with a table shape, editing cell text:
